Fix detection of chosen image format if the selected filter has more than one "*.xy" suffix in the filesaveoptionsbox. In that case, we need to analyse the string and just use the first suffix.

BUG: 278033